overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ input {
 	text-align: center;
 }
 
+#picture {
+	width: 100%;
+}
+
 #cameraicon {
 	width:70px;
 }
